# OpenWave2D

./: .gitignore  CMakeLists.txt  README.md  run_build.sh
REF/: seismic_ADEPML_2D_elastic_RK4_eighth_order.f90  seismic_CPML_2D_anisotropic.f90  代码提示.txt
config/: anisotropic_cpml_becache.json  elastic_homogeneous.json  elastic_homogeneous_adepml.json
fortran/: seismic_kernels.f90
include/seismic/core/: Config.hpp  Grid.hpp  Types.hpp
include/seismic/initializers/: PMLInitializer.hpp
include/seismic/io/: ModelLoader.hpp  Recorder.hpp  Writer.hpp
include/seismic/main/: Dispatcher.hpp
include/seismic/solvers/: CPMLIntegrator.hpp  RK4Integrator.hpp  TimeIntegrator.hpp  TimeIntegratorFactory.hpp
include/seismic/sources/: SourcePolicies.hpp  SourceTimeFunction.hpp
src/: Config.cpp  Dispatcher.cpp  Grid.cpp  ModelLoader.cpp  PMLInitializer.cpp  Recorder.cpp  Writer.cpp
src/seismic/core/: Config.cpp
src/seismic/initializers/: PMLInitializer.cpp
src/seismic/io/: Recorder.cpp  Writer.cpp
src/seismic/main/: Dispatcher.cpp  main.cpp
src/seismic/solvers/: CPMLIntegrator.cpp  RK4Integrator.cpp  TimeIntegratorFactory.cpp
src/solvers/: CPMLIntegrator.cpp  RK4Integrator.cpp
utils/: plotSnapshots.py  quick_view.py  visualize_results.py
